# dumb-etl

./: .gitignore  Makefile  README.md  dumb-etl.cabal
bench/: bench.hs
executable/: Main.hs
src/: MapReduce.hs  Matcher.hs
